completed developing restful api server 1.0
