# fchain/server/common/swagger/Api.yaml
@@ -1,8 +1,8 @@
 swagger: "2.0"
 info:
   version: 1.0.0
-  title: Hyperledger Fabric 1.2 Balance Transfer API
-  description: Simple Api Sample for to interact with HLF 1.2 NETWORK
+  title: Hyperledger Fabric 1.4 Forensic chain API
+  description: Simple Api Sample for to interact with HLF 1.4 NETWORK
 basePath: /api/v1
 tags:
   - name: Examples
@@ -30,64 +30,93 @@ definitions:
       name:
         type: string
         example: no_stress
-  move:
-    required:
-    - from
-    - to
-    - amount
-    properties:
-      from:
-        type: string
-      to:
-        type: string
-      amount:
-        type: integer
-
-  user:
-    required:
-    - name
-    - balance
-    properties:
-      name:
-        type: string
-      balance:
-        type: integer
 
 paths:
-  /balance/saveUser:
+  /fchain/addDocument:
     post:
       tags:
-      - Balance
+        - Fchain
       description: Fetch all examples
       parameters:
-      - name: Channel
-        in: query
-        type: string
-        description: an example
-        required: true
-      - name: Id
-        in: query
-        type: string
-        description: an example
-        required: true
-      - name: Name
-        in: query
-        type: string
-        description: an example
-        required: true
-      - name: Age
-        in: query
-        type: string
-        description: an example
-        required: true
-      - name: Sex
-        in: query
-        type: string
-        description: an example
-        required: true
+        - name: DocumentId
+          in: body
+          type: string
+          description: an evidence unique Id
+          required: true
+        - name: DocumentType
+          in: body
+          type: string
+          description: an evidence unique Id
+          required: true
+        - name: WriterId
+          in: body
+          type: string
+          description: an evidence register
+          required: true
+        - name: WriteTime
+          in: body
+          type: string
+          description: an evidence description
+          required: true
+        - name: Description
+          in: body
+          type: string
+          description: the case id of this evidence
+          required: true
+        - name: CaseId
+          in: body
+          type: string
+          description: the integrity of this evidence
+          required: true
+        - name: Hash
+          in: body
+          type: string
+          description: the time of registration
+          required: true
       responses:
         200:
           description: Returns all examples
+
+  /fchain/addEvidence:
+    post:
+      tags:
+        - Fchain
+      description: Fetch all examples
+      parameters:
+        - name: EvidenceId
+          in: body
+          type: string
+          description: an evidence unique Id
+          required: true
+        - name: RegisterId
+          in: body
+          type: string
+          description: an evidence register
+          required: true
+        - name: Description
+          in: body
+          type: string
+          description: an evidence description
+          required: true
+        - name: CaseId
+          in: body
+          type: string
+          description: the case id of this evidence
+          required: true
+        - name: Hash
+          in: body
+          type: string
+          description: the integrity of this evidence
+          required: true
+        - name: RegisterTime
+          in: body
+          type: string
+          description: the time of registration
+          required: true
+      responses:
+        200:
+          description: Returns all examples
+
 
   /examples:
     get:
@@ -128,61 +157,6 @@ paths:
         404:
           description: Example not found
 
-  /balance/hello:
-    get:
-      tags:
-      - Balance
-      description: Get User Balance
-      responses:
-        200:
-          description: Returns User's Currently Balance
-
-  /balance/{id}:
-    get:
-      tags:
-      - Balance
-      parameters:
-      - name: id
-        in: path
-        required: true
-        description: The id of the user to retrieve currently balance
-        type: string
-      description: Get User Balance
-      responses:
-        200:
-          description: Returns User's Currently Balance
-
-  /balance/user:
-    post:
-      tags:
-      - Balance
-      Summary: Add the new user
-      parameters:
-      - name: id
-        in: body
-        required: true
-        schema:
-          $ref: "#/definitions/user"
-      description: The id of the user to be added
-      responses:
-        200:
-          description: Returns User's Current Balance
-
-  /balance:
-    post:
-      tags:
-      - Balance
-      parameters:
-      - name: move balance request
-        in: body
-        description: The id of the user to retrieve currently balance
-        required: true
-        schema:
-          $ref: "#/definitions/move"
-      description: Get User Balance
-      responses:
-        200:
-          description: Returns User's Currently Balance
 
   /spec:
     get:
